tests/fail/function_pointers/cast_int_to_fn_ptr.stderr
error: Undefined Behavior: 0x2a is not a valid pointer
  --> $DIR/cast_int_to_fn_ptr.rs:LL:CC
   |
LL |     g(42)
   |     ^^^^^ 0x2a is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/cast_int_to_fn_ptr.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

